======= 2.0.0 (BETA)

- added: `controller.invalid()` creates an ErrorBuilder instance and it responds in next tick
- added: `controller.sitemap_url([id])` returns URL from sitemap
- added: `controller.sitemap_name([id])` returns name/title from sitemap
- added: `@{sitemap_url([id])}` returns URL from sitemap
- added: `@{sitemap_name([id])}` returns name/title from sitemap
- added: `/migrations/` all scripts this directory are executed only one (then are renamed)
- added: `F.route()` supports a new flag: `cors` (creates a cors route) and `credentials` (enables cookies for cors)

- updated: `F.file()` supports flags instead of middleware and flags supports extensions `['.jpg', '.png']`
- updated: `F.sitemap()` returns object with a new field: `wildcard: {Boolean}`
- updated: `F.problem()`, `F.change()`, `controller.problem()` and `controller.change()` write logs to the file

- renamed: event `route-add` to `route`

- removed: `SCHEMA()`
- removed: composer from `SchemaBuilderEntity`
- removed: obsolete code
- removed: `controller.async()`
- removed: `framework.async()`

- improved: ErrorBuilder

======= 1.9.7

- added: `F.web()` --> alias to F.route()
- added: `F.cors(url, flags, credentials)`
- added: `config['default-response-maxage']`, default value `11111111`
- added: `U.get(obj, path)` reads a value from `obj` by path
- added: `U.set(obj, path, value)` sets a value into `obj` by path
- added: (IMPORTANT) `config['default-root']` can replace root relative path
- added: `FrameworkImage` --> `instance.make(function(image) {})`
- added: `FrameworkImage` supports middleware `FrameworkImage.middleware(extension, fn)`
- added: `controller.$get([helper], callback)` or alias `controller.$read([helper], callback)` - schema must be defined in the route
- added: `controller.$remove([helper], callback)` - schema must be defined in the route
- added: `controller.$save([helper], callback)` - schema must be defined in the route